--- a/0_todo/ToDoSave2.html
+++ b/0_todo/ToDoSave2.html
@@ -38,7 +38,7 @@
                 };
             },
             mounted() {
-                const savedTodos = localStorage.getItem('todos');
+                const savedTodos = localStorage.getItem('todos2');
                 if (savedTodos) {
                     this.todos = JSON.parse(savedTodos);
                 }
