--- a/r_qr_read/qr_read.html
+++ b/r_qr_read/qr_read.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QRコードリーダー</title>
     <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
 </head>
-
 <body>
     <h1>QRコードを読み取る</h1>
 
+    <!-- カメラを起動するボタン -->
+    <button id="startScanButton">カメラを起動</button>
+
     <!-- カメラビューの表示領域 -->
-    <div id="reader" style="width: 500px;"></div>
+    <div id="reader" style="width: 500px; display:none;"></div>
 
     <!-- 結果表示 -->
     <div id="result"></div>
 
     <script>
+        let html5QrCode;
+
+        // スキャンが成功したときの処理
         function onScanSuccess(decodedText, decodedResult) {
-            // QRコードが正常に読み取られた場合
             document.getElementById('result').innerText = `読み取った内容: ${decodedText}`;
             // ここで読み取った内容を保存する処理を追加可能
         }
@@ -29,22 +32,31 @@
             console.warn(`QRコードの読み取りに失敗しました: ${error}`);
         }
 
-        // QRコードリーダーの設定
-        let html5QrCode = new Html5Qrcode("reader");
+        // カメラを起動してQRコードスキャンを開始する関数
+        function startQrCodeScanner() {
+            // カメラビューを表示
+            document.getElementById('reader').style.display = 'block';
 
-        // カメラを起動してスキャン開始
-        html5QrCode.start(
-            { facingMode: "environment" },  // 背面カメラの使用
-            {
-                fps: 10,    // フレームレート
-                qrbox: { width: 250, height: 250 }  // スキャンエリアのサイズ
-            },
-            onScanSuccess,
-            onScanFailure
-        ).catch(err => {
-            console.error(`カメラの起動に失敗しました: ${err}`);
-        });
+            // QRコードリーダーのインスタンスを作成
+            html5QrCode = new Html5Qrcode("reader");
+
+            // カメラを起動してスキャン開始
+            html5QrCode.start(
+                { facingMode: "environment" },  // 背面カメラの使用
+                {
+                    fps: 10,    // フレームレート
+                    qrbox: { width: 250, height: 250 }  // スキャンエリアのサイズ
+                },
+                onScanSuccess,
+                onScanFailure
+            ).catch(err => {
+                console.error(`カメラの起動に失敗しました: ${err}`);
+            });
+        }
+
+        // ボタンクリックでカメラ起動
+        document.getElementById('startScanButton').addEventListener('click', startQrCodeScanner);
     </script>
 </body>
-
 </html>
+
