--- a/r_qr_read/qr_read.html
+++ b/r_qr_read/qr_read.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QRコードリーダー</title>
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.8/html5-qrcode.min.js" integrity="sha512-r6rDA7W6ZeQhvl8S7yRVQUKVHdexq+GAlNkNNqVC7YyIV+NwqCTJe2hDWCiffTyRNOeGEzRRJ9ifvRm/HCzGYg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <h1>QRコードを読み取る</h1>
@@ -28,6 +28,10 @@
             try {
                 document.getElementById('reader').style.display = 'block';
                 document.getElementById('error').innerText = '';
+
+                if (typeof Html5Qrcode === 'undefined') {
+                    throw new Error('Html5Qrcode ライブラリが読み込まれていません');
+                }
 
                 if (!html5QrCode) {
                     html5QrCode = new Html5Qrcode("reader");
@@ -54,7 +58,9 @@
             }
         }
 
-        document.getElementById('startScanButton').addEventListener('click', startQrCodeScanner);
+        document.addEventListener('DOMContentLoaded', () => {
+            document.getElementById('startScanButton').addEventListener('click', startQrCodeScanner);
+        });
     </script>
 </body>
 </html>
