--- a/r_qr_read/qr_read.html
+++ b/r_qr_read/qr_read.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>デバッグ機能付きQRコードリーダー</title>
+    <title>シンプル化されたQRコードリーダー</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.8/html5-qrcode.min.js" integrity="sha512-r6rDA7W6ZeQhvl8S7yRVQUKVHdexq+GAlNkNNqVC7YyIV+NwqCTJe2hDWCiffTyRNOeGEzRRJ9ifvRm/HCzGYg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
         #reader {
@@ -23,12 +23,12 @@
     </style>
 </head>
 <body>
-    <h1>デバッグ機能付きQRコードリーダー</h1>
+    <h1>シンプル化されたQRコードリーダー</h1>
     <button id="startScanButton">カメラを起動</button>
     <div id="reader"></div>
     <div id="controls">
         <label for="qrboxSize">QRコード読み取り枠のサイズ:</label>
-        <input type="range" id="qrboxSize" min="50" max="300" value="250" step="10">
+        <input type="range" id="qrboxSize" min="100" max="300" value="250" step="10">
         <span id="qrboxSizeValue">250 x 250</span>
     </div>
     <div id="result"></div>
@@ -41,7 +41,6 @@
     <script>
         let html5QrCode;
         let qrboxSize = 250;
-        let lastResult = '';
         let debugInfo = document.getElementById('debugInfo');
 
         function logDebug(message) {
@@ -51,16 +50,12 @@
         }
 
         function onScanSuccess(decodedText, decodedResult) {
-            if (decodedText !== lastResult) {
-                document.getElementById('result').innerText = `読み取った内容: ${decodedText}`;
-                lastResult = decodedText;
-                logDebug(`QRコード読み取り成功: ${decodedText}`);
-            }
+            document.getElementById('result').innerText = `読み取った内容: ${decodedText}`;
+            logDebug(`QRコード読み取り成功: ${decodedText}`);
         }
 
         function onScanFailure(error) {
-            console.warn(`QRコードの読み取りに失敗しました: ${error}`);
-            logDebug(`QRコード読み取り失敗: ${error}`);
+            // 読み取り失敗時のログ出力を削除
         }
 
         async function startQrCodeScanner() {
@@ -68,10 +63,6 @@
                 document.getElementById('reader').style.display = 'block';
                 document.getElementById('error').innerText = '';
                 logDebug('カメラ起動を開始します');
-
-                if (typeof Html5Qrcode === 'undefined') {
-                    throw new Error('Html5Qrcode ライブラリが読み込まれていません');
-                }
 
                 if (html5QrCode) {
                     await html5QrCode.stop();
@@ -90,7 +81,9 @@
                         {
                             fps: 10,
                             qrbox: { width: qrboxSize, height: qrboxSize },
-                            aspectRatio: 1.0
+                            aspectRatio: 1.0,
+                            disableFlip: false,
+                            formatsToSupport: [Html5QrcodeSupportedFormats.QR_CODE]
                         },
                         onScanSuccess,
                         onScanFailure
