--- a/r_qr_read/qr_read_save.html
+++ b/r_qr_read/qr_read_save.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRコードリーダー（保存機能付き）</title>
+    <title>QRコードリーダー（保存機能・重複除去機能付き）</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.8/html5-qrcode.min.js"
         integrity="sha512-r6rDA7W6ZeQhvl8S7yRVQUKVHdexq+GAlNkNNqVC7YyIV+NwqCTJe2hDWCiffTyRNOeGEzRRJ9ifvRm/HCzGYg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <h1>シンプル化されたQRコードリーダー（保存機能付き）</h1>
+    <h1>シンプル化されたQRコードリーダー（保存機能・重複除去機能付き）</h1>
     <button id="startScanButton">カメラを起動</button>
     <div id="reader"></div>
     <div id="controls">
@@ -54,6 +54,7 @@
     </div>
     <button id="downloadButton">結果をダウンロード</button>
     <button id="resetButton">結果をリセット</button>
+    <button id="removeDuplicatesButton">重複を削除</button>
     <div id="debug">
         <h2>デバッグ情報</h2>
         <div id="debugInfo"></div>
@@ -83,7 +84,7 @@
 
         function addToScannedResults(result) {
             scannedResults.push(result);
-            localStorage.setItem('scannedResults', JSON.stringify(scannedResults));
+            saveResults();
             updateResultsList();
         }
 
@@ -103,6 +104,10 @@
                 scannedResults = JSON.parse(savedResults);
                 updateResultsList();
             }
+        }
+
+        function saveResults() {
+            localStorage.setItem('scannedResults', JSON.stringify(scannedResults));
         }
 
         async function startQrCodeScanner() {
@@ -173,9 +178,17 @@
 
         function resetResults() {
             scannedResults = [];
-            localStorage.removeItem('scannedResults');
+            saveResults();
             updateResultsList();
             logDebug('結果をリセットしました');
+        }
+
+        function removeDuplicates() {
+            const uniqueResults = [...new Set(scannedResults)];
+            scannedResults = uniqueResults;
+            saveResults();
+            updateResultsList();
+            logDebug('重複を削除しました');
         }
 
         document.addEventListener('DOMContentLoaded', () => {
@@ -183,6 +196,7 @@
             document.getElementById('qrboxSize').addEventListener('input', updateQrBoxSize);
             document.getElementById('downloadButton').addEventListener('click', downloadResults);
             document.getElementById('resetButton').addEventListener('click', resetResults);
+            document.getElementById('removeDuplicatesButton').addEventListener('click', removeDuplicates);
             loadScannedResults();
             logDebug('ページの読み込みが完了しました');
         });
