--- a/r_qr_read/qr_read_save3.html
+++ b/r_qr_read/qr_read_save3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRコードリーダー（保存機能・重複除去機能付き）</title>
+    <title>QRコードリーダー(party)</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.8/html5-qrcode.min.js"
         integrity="sha512-r6rDA7W6ZeQhvl8S7yRVQUKVHdexq+GAlNkNNqVC7YyIV+NwqCTJe2hDWCiffTyRNOeGEzRRJ9ifvRm/HCzGYg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <h1>シンプル化されたQRコードリーダー（保存機能・重複除去機能付き）</h1>
+    <h1>QRコードリーダー</h1>
     <button id="startScanButton">カメラを起動</button>
     <div id="reader"></div>
     <div id="controls">
