--- a/r_qr_read/qr_read_save3.html
+++ b/r_qr_read/qr_read_save3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRコードリーダー(party)</title>
+    <title>QRコードリーダー</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.8/html5-qrcode.min.js"
         integrity="sha512-r6rDA7W6ZeQhvl8S7yRVQUKVHdexq+GAlNkNNqVC7YyIV+NwqCTJe2hDWCiffTyRNOeGEzRRJ9ifvRm/HCzGYg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -163,7 +163,10 @@
         }
 
         function downloadResults() {
-            const text = scannedResults.join('\n');
+            let header = "id"; // カラム名として 'id' を追加
+            let text = scannedResults.join('\n'); // スキャン結果のみを追加
+            text = header + '\n' + text; // カラム名とスキャン結果を結合
+
             const blob = new Blob([text], { type: 'text/plain' });
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
