--- a/p_mp3/mp3_player_fixsp.html
+++ b/p_mp3/mp3_player_fixsp.html
@@ -1,3 +1,39 @@
-        <div class="card">
-            <a href="/qr_read" target="_blank">受付</a>
-        </div>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MP3 Player with Speed Control</title>
+</head>
+<body>
+    <h1>MP3 Player with Speed Control</h1>
+
+    <!-- ファイル選択 -->
+    <input type="file" id="fileInput" accept="audio/mpeg">
+    <br><br>
+
+    <!-- オーディオプレイヤー -->
+    <audio id="audioPlayer" controls>
+        お使いのブラウザはオーディオタグをサポートしていません。
+    </audio>
+
+    <script>
+        // 各要素を取得
+        const fileInput = document.getElementById('fileInput');
+        const audioPlayer = document.getElementById('audioPlayer');
+        const speedControl = document.getElementById('speedControl');
+        const speedValue = document.getElementById('speedValue');
+
+        // ファイルが選択された時の処理
+        fileInput.addEventListener('change', function(event) {
+            const file = event.target.files[0];  // 選択されたファイルを取得
+            if (file) {
+                const fileURL = URL.createObjectURL(file);  // ファイルからURLを生成
+                audioPlayer.src = fileURL;  // オーディオプレイヤーにファイルを読み込む
+                audioPlayer.play();  // 自動再生
+            }
+        });
+
+    </script>
+</body>
+</html>
