--- a/0_todo/hour_todo_all.html
+++ b/0_todo/hour_todo_all.html
@@ -11,15 +11,11 @@
     <meta name="twitter:site" content="@IshiiStpete" />
     <meta name="twitter:title" content="simple todo list">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/tztechno/vercel_todo/main/todo.png">
-
+    
     <style>
-        .input-container {
-            display: flex;
-            align-items: center; /* ボタンと入力ボックスを中央揃え */
-        }
-        .time-input {
+        input[type="number"] {
             width: 60px; /* 横幅を短く設定 */
-            margin-left: 10px; /* ボタンと入力ボックスの間にスペースを追加 */
+            margin-left: 10px; /* ボタンとの間にスペースを追加 */
         }
     </style>
 </head>
@@ -28,12 +24,10 @@
     <div id="app">
         <h1>Todo List</h1>
         <textarea v-model="newTodos" placeholder="Enter multiple todos, each on a new line"></textarea>
-        <div class="input-container">
-            <input type="number" v-model.number="defaultTime" class="time-input" placeholder="時間（時間単位）" min="0" />
-            <button @click="addTodos">Add Todos</button>
-            <button @click="saveToFile">Save to File</button>
-            <button @click="resetTodos">Reset</button>
-        </div>
+        <button @click="addTodos">Add Todos</button>
+        <button @click="saveToFile">Save to File</button>
+        <button @click="resetTodos">Reset</button>
+        <input type="number" v-model.number="defaultTime" placeholder="時間（時間単位）" min="0" /> <!-- 一定時間指定 -->
         <ul>
             <li v-for="(todo, index) in todos" :key="index">
                 <input type="checkbox" v-model="todo.done" />
@@ -112,4 +106,5 @@
 </body>
 
 </html>
+
 
